--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: python
 python:
     - "3.8.1"
 install:
-    - pip install --user poetry
+    - pip install poetry
 script:
+    - poetry shell
     - pytest
