new test for ci

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,4 @@ python:
 install:
     - pip install poetry
 script:
-    - poetry shell
-    - poetry install
-    - pytest
+    - poetry shell & poetry install & pytest
