--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ python = "^3.8"
 beautifulsoup4 = "^4.9.3"
 requests = "^2.26.0"
 pandas = "^1.3.2"
+pytest-cov = "^2.12.1"
+codecov = "^2.1.12"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
